# hjduino_noob_car

./: CMakeCache.txt  CMakeLists.txt  Makefile  NoobCar  README.md  cmake_install.cmake  gesture.py  main.cpp  motion.cpp  motion.h  new.py  vision.cpp  vision.h
